Use Python 3.13, git trepan3k, updated doc
Use Python 3.13.
Use git trepan3k since it has passthrough exceptions needed for Abort
mathics3k-graph is now the package name

--- a/docker/Dockerfile-dev
+++ b/docker/Dockerfile-dev
@@ -48,7 +48,8 @@ RUN apt-get install -y -qq \
     pkg-config \
     pyqt5-dev-tools \
     python3-pip \
-    python3.12-venv \
+    python3.13-dev \
+    python3.13-venv \
     remake \
     rustc \
     sqlite3 \
@@ -61,10 +62,10 @@ RUN apt-get install -y -qq \
 # # defer deletion until close to the end
 # # RUN rm -fr /tmp*_amd64.deb
 
-RUN /usr/bin/python3.12 -m venv /opt/python3.12
-ENV PATH=.:/opt/python3.12/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
-ENV PYTHON=/opt/python3.12/bin/python3.12
-ENV PIP=/opt/python3.12/bin/pip
+RUN /usr/bin/python3.13 -m venv /opt/python3.13
+ENV PATH=.:/opt/python3.13/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
+ENV PYTHON=/opt/python3.13/bin/python3.13
+ENV PIP=/opt/python3.13/bin/pip
 RUN $PYTHON -m pip install --upgrade pip
 
 ####################
@@ -74,14 +75,16 @@ RUN $PYTHON -m pip install --upgrade pip
 RUN git clone --depth 1 https://github.com/Mathics3/stopit.git
 RUN (cd stopit && $PIP install -e .)
 
+RUN $PIP install -e git+https://github.com/Trepan-Debuggers/python3-trepan#egg=trepan3k
+
 # ################
 # # Mathics core #
 # ################
 
 RUN git clone --depth 1 https://github.com/Mathics3/mathics-scanner.git
 RUN (cd mathics-scanner && $PIP install -e .[full])
-RUN $PIP install cython trepan3k
-RUN git clone --depth 1 https://github.com/Mathics3/mathics-core.git
+RUN $PIP install cython
+RUN git clone --depth 1 --branch release-9.0 https://github.com/Mathics3/mathics-core.git
 # For reasons I don't understand, "submodule init" only adds the first repository.
 # We need to add the second repository Rubi, explicitly
 RUN (cd mathics-core && git submodule update --init --recursive && \
@@ -92,13 +95,15 @@ RUN (cd mathics-core && bash ./admin-tools/make-JSON-tables.sh)
 ##############################################
 # Mathics Modules: Trepan, Graph, and Natlang
 ##############################################
+RUN pip install Mathics3-Module-Base
+RUN pip install mathics-pygments
 RUN git clone --depth 1 https://github.com/Mathics3/Mathics3-trepan.git
-RUN (cd Mathics3-trepan && $PIP install -e .)
+RUN (cd Mathics3-trepan && $PIP install --no-build-isolation -e .)
 
 RUN git clone --depth 1 https://github.com/Mathics3/trepan3k-mathics-debugger/
 RUN (cd trepan3k-mathics-debugger && $PIP install -e .)
 
-RUN $PIP install -e git+https://github.com/Mathics3/pymathics-graph#egg=pymathics-graph
+RUN $PIP install -e git+https://github.com/Mathics3/pymathics-graph#egg=mathics3-graph
 RUN $PIP install -e git+https://github.com/Mathics3/pymathics-natlang#egg=pymathics-natlang
 # # RUN $PIP install "pymathics-natlang>=8"
 
