Misc testing bugfixes
* Install wordnet in a place Python and Mathics3 can find it
* Use full path of mathics3-tokens, since this isn't found otherwise

--- a/docker/Dockerfile-dev
+++ b/docker/Dockerfile-dev
@@ -109,7 +109,6 @@ RUN $PIP install -e git+https://github.com/Mathics3/pymathics-natlang#egg=pymath
 RUN $PIP install spacy wordcloud
 RUN $PYTHON -m spacy download en_core_web_md
 RUN $PIP install nltk
-RUN $PYTHON -m nltk.downloader wordnet omw-1.4
 
 # ENV DATA_DIR=/usr/src/app/mathics-core/mathics/doc/latex/
 # ENV DOCTEST_LATEX_DATA_PCL=/usr/src/app/mathics-core/mathics/doc/latex/doctext_latex_data.pcl
@@ -183,6 +182,7 @@ COPY django-db/mathics.sqlite ${MATHICS3_HOME}/.local/var/Mathics3/mathics.sqlit
 RUN chown -R ubuntu:ubuntu $MATHICS3_HOME ${MATHICS3_HOME}/.local
 RUN chown -R ubuntu:ubuntu ${MATHICS3_HOME}/data
 USER ubuntu
+RUN $PYTHON -m nltk.downloader wordnet2022 omw-1.4
 
 ENTRYPOINT ["/usr/local/bin/mathics-omnibus.sh"]
 
