--- a/docker/Dockerfile-dev
+++ b/docker/Dockerfile-dev
@@ -1,4 +1,4 @@
-FROM ubuntu:24.10
+FROM ubuntu:25.04
 
 ENV MATHICS3_HOME=/home/ubuntu
 ENV MATHICS3_MODULE_OPTION="--load-module pymathics.graph,pymathics.natlang,pymathics.trepan"
@@ -47,7 +47,6 @@ RUN apt-get install -y -qq \
     pkg-config \
     pyqt5-dev-tools \
     python3-pip \
-    python3.13-dev \
     python3.13-venv \
     remake \
     rustc \
@@ -80,9 +79,12 @@ RUN $PIP install -e git+https://github.com/Trepan-Debuggers/python3-trepan#egg=t
 # # Mathics core #
 # ################
 
-RUN git clone --depth 1 https://github.com/Mathics3/mathics-scanner.git
+RUN git clone --depth 1 --branch release-2.0.0 https://github.com/Mathics3/mathics-scanner.git
 RUN (cd mathics-scanner && $PIP install -e .[full])
 RUN $PIP install cython
+RUN $PIP install git+https://github.com/rocky/python-xdis.git
+RUN $PIP install git+https://github.com/Trepan-Debuggers/python3-trepan.git
+
 RUN git clone --depth 1 --branch release-9.0 https://github.com/Mathics3/mathics-core.git
 # For reasons I don't understand, "submodule init" only adds the first repository.
 # We need to add the second repository Rubi, explicitly
@@ -102,9 +104,8 @@ RUN (cd Mathics3-trepan && $PIP install --no-build-isolation -e .)
 RUN git clone --depth 1 https://github.com/Mathics3/trepan3k-mathics-debugger/
 RUN (cd trepan3k-mathics-debugger && $PIP install -e .)
 
-RUN $PIP install -e git+https://github.com/Mathics3/pymathics-graph#egg=mathics3-graph
-RUN $PIP install -e git+https://github.com/Mathics3/pymathics-natlang#egg=pymathics-natlang
-# # RUN $PIP install "pymathics-natlang>=8"
+RUN $PIP install -e "git+https://github.com/Mathics3/pymathics-graph#egg=Mathics3-graph"
+RUN $PIP install -e "git+https://github.com/Mathics3/pymathics-natlang#egg=pymathics-natlang"
 
 RUN $PIP install spacy wordcloud
 RUN $PYTHON -m spacy download en_core_web_md
@@ -148,7 +149,7 @@ RUN mv -v doc_html_data.pcl /home/ubuntu/mathics-django/mathics_django/doc/doc_d
 # Mathicsscript  #
 ##################
 
-RUN git clone https://github.com/Mathics3/mathicsscript.git
+RUN git clone --depth 1 --branch release-9.0.0 https://github.com/Mathics3/mathicsscript.git
 RUN (cd mathicsscript && PYTHON=$PYTHON make install)
 
 RUN ${PYTHON} -m pip install mathicsscript[full]
